test/files/errors/wrongType2.jg
_main int ()
{
    s string;

    s = 12; # Error
    0 return;
}